fix overflowing

--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -35,7 +35,7 @@ h1 {
     list-style-type: none;
     margin: 5px;
     padding: 0;
-    min-height: 400px;
+    min-height: 360px;
 }
 
 @media (max-width: 510px) {
